--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>   
+<body>
+  Header Logo
+  <ul>
+    <li><a href="#">header link one</a></li>
+    <li><a href="#">header link two</a></li>
+    <li><a href="#">header link three</a></li>
+  </ul>
+  <h1>This website is awesome</h1>
+   <p>
+    It has some subtext that goes under the main title here.
+    It's a smaller font and the color is lower contrast.
+   </p>
+   <button>Sign Up</button> 
+     <h2>Some random information</h2>
+     
+    
 </body>
 </html>
