create images folder with 5 images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
    </p>
    <button>Sign Up</button> 
      <h2>Some random information</h2>
-     
+      <img src="./images/space-shuttle.jpg" alt="space-shuttle">
+      <div>Wish I had one of these</div>
+
     
 </body>
 </html>
