add links to images and add last 3 sections of html

--- a/index.html
+++ b/index.html
@@ -19,10 +19,26 @@
    </p>
    <button>Sign Up</button> 
      <h2>Some random information</h2>
-      <img src="./images/space-shuttle.jpg" alt="space-shuttle">
+      <img src="./images/space-shuttle.jpg" alt="space-shuttle - Photo by NASA on unsplash">
       <div>Wish I had one of these</div>
-      
 
-    
+      <img src="./images/space-shuttle-above-atmosphere.jpg" alt="image-of-space-shuttle-above-atmosphere - Photo by NASA on unsplash">
+      <div>Then I could this</div>
+
+      <img src="./images/earth-from-lunar-perspective.jpg" alt="image-of-earth-from-lunar-perspective - Photo by NASA on unsplash">
+      <div>I could go here</div>
+
+      <img src="./images/mars.jpg" alt="image-of-mars - Photo by NASA on unsplash">
+      <div>Maybe even here</div>
+   <div>
+    This is an inspiring quote, or a testimonial from a customer.Maybe its just filling up
+    space, or maybe people will actually read it.Who knows? All I know is that it looks nice
+    -Thor,God of thunder
+   </div>
+   <div>
+    <h3>Call to action!Its time!</h3>
+     <p>Sign up for our product by clicking that button over there</p>
+     <button>Sign up</button>
+   </div>
 </body>
 </html>
