add hero and footer class to html and css
both have   background-color:#1f2937; and width/height 100px

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ <div class="hero"> 
   Header Logo
   <ul>
     <li><a href="#">header link one</a></li>
@@ -17,7 +18,9 @@
     It has some subtext that goes under the main title here.
     It's a smaller font and the color is lower contrast.
    </p>
-   <button>Sign Up</button> 
+   <button>Sign Up</button>
+   <img src="./images/Rocket.jpg" alt="rocket launch -Photo by NASA on unsplash">
+ </div>   
      <h2>Some random information</h2>
       <img src="./images/space-shuttle.jpg" alt="space-shuttle - Photo by NASA on unsplash">
       <div>Wish I had one of these</div>
@@ -40,5 +43,6 @@
      <p>Sign up for our product by clicking that button over there</p>
      <button>Sign up</button>
    </div>
+   <div class="footer">Copyright C The Odin Project 2021</div>
 </body>
 </html>
