--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
  <div class="hero"> 
-  Header Logo
-  <ul>
-    <li><a href="#">header link one</a></li>
-    <li><a href="#">header link two</a></li>
-    <li><a href="#">header link three</a></li>
-  </ul>
+  <div class=" header logo">Header Logo</div>
+   <ul>
+    <li><a href="#" class="header link">header link one</a></li>
+    <li><a href="#" class="header link">header link two</a></li>
+    <li><a href="#" class="header link">header link three</a></li>
+   </ul>
   <h1>This website is awesome</h1>
    <p>
     It has some subtext that goes under the main title here.
