--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ <div class="container"> 
  <div class="hero"> 
   <div class=" header logo"><div>Header Logo</div>
    <ul>
@@ -13,15 +14,18 @@
     <li><a href="#" class="header link">header link two</a></li>
     <li><a href="#" class="header link">header link three</a></li>
    </ul>
-  </div> 
+  </div>
+  <div class="secondary"> 
   <h1>This website is awesome</h1>
    <p>
     It has some subtext that goes under the main title here.
     It's a smaller font and the color is lower contrast.
    </p>
    <button>Sign Up</button>
-   <img src="./images/Rocket.jpg" alt="rocket launch -Photo by NASA on unsplash">
- </div>   
+   <img src="./images/Rocket.jpg" alt="rocket launch -Photo by NASA on unsplash" class="rocket" width="300px" height="200px">
+ </div>
+ </div>
+ <div class="tertiary">   
      <h2>Some random information</h2>
       <img src="./images/space-shuttle.jpg" alt="space-shuttle - Photo by NASA on unsplash">
       <div>Wish I had one of these</div>
@@ -45,5 +49,6 @@
      <button>Sign up</button>
    </div>
    <div class="footer">Copyright C The Odin Project 2021</div>
+ </div>  
 </body>
 </html>
