--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
       <img src="./images/mars.jpg" alt="image-of-mars - Photo by NASA on unsplash">
       <div>Maybe even here</div>
-   <div>
+ </div>
+      <div>
     This is an inspiring quote, or a testimonial from a customer.Maybe its just filling up
     space, or maybe people will actually read it.Who knows? All I know is that it looks nice
     -Thor,God of thunder
