add text class to all text under tertiary
contain both image and text in a div foe every item

--- a/index.html
+++ b/index.html
@@ -27,17 +27,21 @@
  </div>   
      <h2>Some random information</h2>
  <div class="tertiary">
+      <div>
       <img src="./images/space-shuttle.jpg" alt="space-shuttle - Photo by NASA on unsplash">
-      <div>Wish I had one of these</div>
+      <div class="text">Wish I had one of these</div></div>
 
+      <div>    
       <img src="./images/space-shuttle-above-atmosphere.jpg" alt="image-of-space-shuttle-above-atmosphere - Photo by NASA on unsplash">
-      <div>Then I could this</div>
+      <div class="text">Then I could this</div></div>
 
+      <div>
       <img src="./images/earth-from-lunar-perspective.jpg" alt="image-of-earth-from-lunar-perspective - Photo by NASA on unsplash">
-      <div>I could go here</div>
+      <div class="text">I could go here</div></div>
 
+      <div>
       <img src="./images/mars.jpg" alt="image-of-mars - Photo by NASA on unsplash">
-      <div>Maybe even here</div>
+      <div class="text">Maybe even here</div></div>
  </div>
       <div>
     This is an inspiring quote, or a testimonial from a customer.Maybe its just filling up
