--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
       <img src="./images/mars.jpg" alt="image-of-mars - Photo by NASA on unsplash">
       <div class="text">Maybe even here</div></div>
  </div>
-      <div>
+ <div class="inspiration">
+      <div class="qoute">
     This is an inspiring quote, or a testimonial from a customer.Maybe its just filling up
     space, or maybe people will actually read it.Who knows? All I know is that it looks nice
-    -Thor,God of thunder
+     <span>-Thor,God of thunder</span>
    </div>
+  </div>
    <div>
     <h3>Call to action!Its time!</h3>
      <p>Sign up for our product by clicking that button over there</p>
