--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       <div class="text">Maybe even here</div></div>
  </div>
  <div class="inspiration">
-      <div class="qoute">
+    <div class="quote">
     This is an inspiring quote, or a testimonial from a customer.Maybe its just filling up
     space, or maybe people will actually read it.Who knows? All I know is that it looks nice
-     <span>-Thor,God of thunder</span>
+     <div class="Thor">-Thor,God of thunder</div>
    </div>
   </div>
    <div>
