add classes to section 4
.ad as overall container in flex display with styling

.ad button in flex display with styling

--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
      <div class="Thor">-Thor,God of thunder</div>
    </div>
   </div>
-   <div>
+   <div class="ad">
+    <div class="four">
     <h3>Call to action!Its time!</h3>
-     <p>Sign up for our product by clicking that button over there</p>
+     <p>Sign up for our product by clicking that button over there</p></div>
      <button>Sign up</button>
    </div>
    <div class="footer">Copyright C The Odin Project 2021</div>
