--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     <li><a href="#" class="header link">header link three</a></li>
    </ul>
   </div>
-  <div class="secondary"> 
+  <div class="secondary">
+    <div class="section">
   <h1>This website is awesome</h1>
    <p>
     It has some subtext that goes under the main title here.
     It's a smaller font and the color is lower contrast.
    </p>
-   <button>Sign Up</button>
+   <button>Sign Up</button></div>
    <img src="./images/Rocket.jpg" alt="rocket launch -Photo by NASA on unsplash" class="rocket" width="300px" height="200px">
  </div>
  </div>   
